content/nomad/v1.7.x/content/docs/commands/operator/index.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Nomad and the Nomad logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/nomad/blob/-/LICENSE

layout: docs
page_title: 'Commands: operator'
description: |
  The operator command provides cluster-level tools for Nomad operators.
---

# Command: operator

The `operator` command provides cluster-level tools for Nomad operators, such
as interacting with the Raft subsystem. This was added in Nomad 0.5.5.

~> Use this command with extreme caution, as improper use could lead to a Nomad
outage and even loss of data.

See the [Outage Recovery guide] guide for some examples of how this command is
used. For an API to perform these operations programmatically, please see the
documentation for the [Operator] endpoint.

## Usage

Usage: `nomad operator <subcommand> <subcommand> [options]`

Run `nomad operator <subcommand>` with no arguments for help on that subcommand.
The following subcommands are available:

- [`operator autopilot get-config`][get-config] - Display the current Autopilot
  configuration

- [`operator autopilot set-config`][set-config] - Modify the current Autopilot
  configuration

- [`operator debug`][debug] - Build an archive of debug data

- [`operator gossip keyring generate`][gossip_keyring_generate] - Generates a gossip encryption key

- [`operator gossip keyring install`][gossip_keyring_install] - Install a gossip encryption key

- [`operator gossip keyring list`][gossip_keyring_list] - List available gossip encryption keys

- [`operator gossip keyring remove`][gossip_keyring_remove] - Deletes a gossip encryption key

- [`operator gossip keyring use`][gossip_keyring_use] - Sets a gossip encryption key as the active key

- [`operator raft list-peers`][list] - Display the current Raft peer
  configuration

- [`operator raft remove-peer`][remove] - Remove a Nomad server from the Raft
  configuration

- [`operator root keyring list`][root_keyring_list] - List available root encryption keys

- [`operator root keyring remove`][root_keyring_remove] - Deletes a root encryption key

- [`operator root keyring rotate`][root_keyring_rotate] - Rotates the root encryption key

- [`operator scheduler get-config`][scheduler-get-config] - Display the current
  scheduler configuration

- [`operator scheduler set-config`][scheduler-set-config] - Modify the scheduler
  configuration

- [`operator snapshot agent`][snapshot-agent] <EnterpriseAlert inline /> - Inspects a snapshot of the Nomad server state

- [`operator snapshot save`][snapshot-save] - Saves a snapshot of the Nomad server state

- [`operator snapshot restore`][snapshot-restore] - Restores a snapshot of the Nomad server state

- [`operator snapshot inspect`][snapshot-inspect] - Inspects a snapshot of the Nomad server state

[debug]: /nomad/docs/commands/operator/debug 'Builds an archive of configuration and state'
[get-config]: /nomad/docs/commands/operator/autopilot/get-config 'Autopilot Get Config command'
[gossip_keyring_generate]: /nomad/docs/commands/operator/gossip/keyring-generate 'Generates a gossip encryption key'
[gossip_keyring_install]: /nomad/docs/commands/operator/gossip/keyring-install 'Install a gossip encryption key'
[gossip_keyring_list]: /nomad/docs/commands/operator/gossip/keyring-list 'List available gossip encryption keys'
[gossip_keyring_remove]: /nomad/docs/commands/operator/gossip/keyring-remove 'Deletes a gossip encryption key'
[gossip_keyring_use]: /nomad/docs/commands/operator/gossip/keyring-use 'Sets a gossip encryption key as the active key'
[list]: /nomad/docs/commands/operator/raft/list-peers 'Raft List Peers command'
[operator]: /nomad/api-docs/operator 'Operator API documentation'
[outage recovery guide]: /nomad/tutorials/manage-clusters/outage-recovery
[remove]: /nomad/docs/commands/operator/raft/remove-peer 'Raft Remove Peer command'
[root_keyring_list]: /nomad/docs/commands/operator/root/keyring-list 'List available root encryption keys'
[root_keyring_remove]: /nomad/docs/commands/operator/root/keyring-remove 'Deletes a root encryption key'
[root_keyring_rotate]: /nomad/docs/commands/operator/root/keyring-rotate 'Rotates the root encryption key'
[set-config]: /nomad/docs/commands/operator/autopilot/set-config 'Autopilot Set Config command'
[snapshot-save]: /nomad/docs/commands/operator/snapshot/save 'Snapshot Save command'
[snapshot-restore]: /nomad/docs/commands/operator/snapshot/restore 'Snapshot Restore command'
[snapshot-inspect]: /nomad/docs/commands/operator/snapshot/inspect 'Snapshot Inspect command'
[snapshot-agent]: /nomad/docs/commands/operator/snapshot/agent 'Snapshot Agent command'
[scheduler-get-config]: /nomad/docs/commands/operator/scheduler/get-config 'Scheduler Get Config command'
[scheduler-set-config]: /nomad/docs/commands/operator/scheduler/set-config 'Scheduler Set Config command'
